# gpt4free-bot

./: .gitignore  main.py  models.py  pyproject.toml  pyrightconfig.json  requirements.txt
gpt4free_bot/: main.py
