[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Carter Grimmeisen", email = "carter.grimmeisen@uah.edu"},
]
dependencies = [
    "py-cord>=2.4.1",
    "python-dotenv>=1.0.0",
    "peewee>=3.16.2",
    "types-peewee>=3.16.0.0",
    "pycord>=0.1.1",
    "gpt4free @ git+https://github.com/xtekky/gpt4free@main",
    "pycryptodome>=3.17",
    "mailgw-temporary-email>=0.0.2",
    "retrying>=1.3.4",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pyright]
reportUnknownMemberType = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
